<resources>
    <string name="app_name">Pixie</string>

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="share_title">Share with</string>


    <!--fontawesome icons -->
    <string name="profile_icon">&#xf007;</string>
    <string name="retry_icon">&#xf00d;</string>
    <string name="crop_icon">&#xf125;</string>
    <string name="rotate_icon">&#xf01e;</string>
    <string name="upload_icon">&#xf093;</string>
    <string name="gallery_icon">&#xf03e;</string>
    <string name="history_icon">&#xf0ca;</string>
    <string name="settings_icon">&#xf013;</string>s
    <string name="delete_icon">&#xf014;</string>
    <string name="share_icon">&#xf1e0;</string>
    <string name="about_us_icon">&#xf0c0;</string>
    <string name="logout_icon">&#xf08b;</string>
</resources>
