<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.infinity.pixie.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/profile_icon"
        android:id="@+id/profile"
        android:textColor="@color/background_color"
        android:background="@android:color/transparent"
        android:textSize="28sp"
        android:padding="20dp"
        android:alpha="0.7"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"/>

    <FrameLayout
        android:id="@+id/cameraLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <com.example.infinity.pixie.CameraSourcePreview
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/camera_preview" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/main_wait_layout">

        <TextView
            android:id="@+id/uploading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:singleLine="true"
            android:text="UPLOADING..."
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


        <TextView
            android:id="@+id/settingMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="100dp"
            android:singleLine="true"
            android:text="MAY TAKE A MINUTE"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/button_capture"
            android:layout_width="90dp"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/capture_button_selector"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_height="90dp" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="90dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:text="@string/gallery_icon"
            android:textColor="@color/background_color"
            android:background="@android:color/transparent"
            android:textSize="28sp"
            android:alpha="0.7"
            android:padding="20dp"
            android:layout_height="90dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imagePreviewLayout"
        android:visibility="gone">

        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:id="@+id/capturedPicturePreview" />-->


        <Button
            android:text="@string/retry_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retryButton"
            android:textColor="@color/background_color"
            android:background="@android:color/transparent"
            android:textSize="28sp"
            android:padding="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:alpha="0.7" />

        <Button
            android:text="@string/crop_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cropButton"
            android:textColor="@color/background_color"
            android:background="@android:color/transparent"
            android:textSize="28sp"
            android:padding="20dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/retryButton"
            android:alpha="0.7" />

        <Button
            android:text="@string/rotate_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rotateButton"
            android:onClick="onCropImageClick"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/cropButton"
            android:textColor="@color/background_color"
            android:background="@android:color/transparent"
            android:textSize="28sp"
            android:padding="20dp"
            android:alpha="0.7" />

        <Button
            android:text="@string/upload_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uploadButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/rotateButton"
            android:textColor="@color/background_color"
            android:background="@android:color/transparent"
            android:textSize="28sp"
            android:padding="20dp"
            android:alpha="0.7" />
    </RelativeLayout>

</RelativeLayout>
