<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.infinity.pixie.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/login_wait_layout">

        <TextView
            android:id="@+id/uploading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:singleLine="true"
            android:text="WELCOME TO PIXIE"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


        <TextView
            android:id="@+id/settingMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="100dp"
            android:singleLine="true"
            android:text="MAY TAKE A FEW SECONDS..."
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/loginLayout"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:id="@+id/login"
            android:textColor="@color/background_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:hint="@string/email"
            android:id="@+id/userEmailIdLoginLayout"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/userEmailIdLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:text="kushalmalani@gmail.com"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <!--<View-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="1px"-->
        <!--android:background="@color/white_greyish" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passowrd"
            android:layout_below="@+id/userEmailIdLoginLayout"
            android:id="@+id/passwordLoginLayout"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:value="12345678"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>




        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/passwordLoginLayout"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_below="@+id/loginBtn"
            android:text="error"
            android:id="@+id/errorResponseLogin"
            android:textColor="@color/error_response"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>
